refactored code, added swagger documentation
